# eruption

./: .gitignore  .gitlab-ci.yml  CHANGES  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVICES.md  DOCUMENTATION.md  INSTALL.md  LIBRARY.md  MACROS.md  Makefile  NETFX.md  README.md  SECURITY.md  SETUP_AUDIO.md  TODO.md  bacon.toml  build-env.sh  clippy.toml  debian  deny.toml  flake.nix  rustfmt.toml
eruption/: Cargo.toml  README.md  build.rs  i18n.toml
eruption-audio-proxy/: Cargo.toml  README.md  build.rs
eruption-audio-proxy/i18n/de-DE/: eruption_audio_proxy.ftl
eruption-audio-proxy/i18n/en-US/: eruption_audio_proxy.ftl
eruption-audio-proxy/src/: audio.rs  constants.rs  main.rs  util.rs
eruption-audio-proxy/tests/: integration_test.rs
eruption-cmd/: Cargo.toml  README.md
eruption-cmd/i18n/de-DE/: eruption_cmd.ftl
eruption-cmd/i18n/en-US/: eruption_cmd.ftl
eruption-cmd/src/: constants.rs  constants.rs~develop  logger.rs  main.rs  util.rs
eruption-cmd/tests/: integration_test.rs
eruption-debug-tool/: Cargo.toml  README.md
eruption-debug-tool/i18n/de-DE/: eruption_debug_tool.ftl
eruption-debug-tool/i18n/en-US/: eruption_debug_tool.ftl
eruption-debug-tool/src/: hwdevices  hwdevices.rs  interact.rs  main.rs  util.rs
eruption-debug-tool/src/hwdevices/: corsair_strafe.rs  custom_serial_leds.rs  mod.rs  roccat_burst_pro.rs  roccat_elo_71_air.rs  roccat_kain_2xx.rs  roccat_kone_aimo.rs  roccat_kone_aimo_remastered.rs  roccat_kone_pure_ultra.rs  roccat_kone_xtd.rs  roccat_kova_aimo.rs  roccat_nyth.rs  roccat_vulcan_1xx.rs  roccat_vulcan_pro.rs  roccat_vulcan_pro_tkl.rs  roccat_vulcan_tkl.rs  roccat_vulcan_tkl_pro.rs
eruption-debug-tool/tests/: integration_test.rs
eruption-fx-proxy/: Cargo.toml  README.md  build.rs  i18n.toml
eruption-fx-proxy/i18n/de-DE/: eruption_fx_proxy.ftl
eruption-fx-proxy/i18n/en-US/: eruption_fx_proxy.ftl
eruption-fx-proxy/src/: backends.rs  constants.rs  dbus_client.rs  dbus_interface.rs  main.rs  util.rs  utils.rs
eruption-fx-proxy/src/backends/: gnome.rs  mod.rs  wayland.rs  x11.rs
eruption-fx-proxy/src/hwdevices/: corsair_strafe.rs  generic_keyboard.rs  mod.rs  roccat_magma.rs  roccat_vulcan_1xx.rs  roccat_vulcan_pro.rs  roccat_vulcan_pro_tkl.rs  roccat_vulcan_tkl.rs  wooting_two_he_arm.rs
eruption-fx-proxy/tests/: integration_test.rs
eruption-gui/: Cargo.toml  README.md  build.rs
eruption-gui-gtk3/: Cargo.toml  README.md  build.rs
eruption-gui-gtk3/i18n/de-DE/: eruption_gui_gtk3.ftl
eruption-gui-gtk3/i18n/en-US/: eruption_gui_gtk3.ftl
eruption-gui-gtk3/resources/: resources.gresource  resources.xml
eruption-gui-gtk3/resources/styles/: app-windows.css  app.css  default.css  windows.css
eruption-gui-gtk3/resources/ui/: about.glade  keyboard-device-template.ui  main.glade  misc-device-template.ui  mouse-device-template.ui  no-connection-template.ui  no-device-template.ui  rule.glade
eruption-gui-gtk3/schemas/: gschemas.compiled  org.eruption.eruption-gui.gschema.xml
eruption-gui-gtk3/src/: command.rs  dbus_client.rs  error_log.rs  main.rs  notifications.rs  preferences.rs  timers.rs  ui.rs  util.rs  zone.rs
eruption-gui-gtk3/src/scripting/: manifest.rs  parameters.rs
eruption-gui-gtk3/src/ui/: about.rs  about_dialog.rs  assistants.rs  automation_rules.rs  canvas.rs  color_schemes.rs  hwdevices.rs  keyboards.rs  keymaps.rs  macros.rs  main.rs  main_window.rs  mice.rs  misc.rs  mod.rs  rule.rs  (+3 more)
eruption-gui-gtk3/tests/: integration_test.rs
eruption-gui/resources/: resources.gresource  resources.xml
eruption-gui/schemas/: gschemas.compiled  org.eruption.eruption-gui.gschema.xml
eruption-gui/src/: dbus_client.rs  error_log.rs  main.rs  preferences.rs  timers.rs  util.rs
eruption-gui/tests/: integration_test.rs
eruption-hotplug-helper/: Cargo.toml  README.md
eruption-hotplug-helper/src/: main.rs  util.rs
eruption-hotplug-helper/tests/: integration_test.rs
eruption-hwutil/: Cargo.toml  README.md  i18n.toml
eruption-hwutil/src/: hwdevices.rs  interact.rs  main.rs  util.rs
eruption-hwutil/tests/: integration_test.rs
eruption-keymap/: Cargo.toml  README.md
eruption-keymap/src/: constants.rs  dbus_client.rs  lua_file.rs  lua_introspection.rs  main.rs  mapping.rs  messages.rs  util.rs
eruption-keymap/tests/: integration_test.rs
eruption-macro/: Cargo.toml  README.md
eruption-macro/src/: assistants.rs  backends.rs  dbus_client.rs  device.rs  hwdevices  hwdevices.rs  lua_introspection.rs  macro.rs  main.rs  util.rs
eruption-macro/tests/: integration_test.rs
eruption-netfx/: Cargo.toml  README.md
eruption-netfx/src/: backends.rs  constants.rs  main.rs  util.rs  utils.rs  xwrap.rs
eruption-netfx/tests/: integration_test.rs
eruption-process-monitor/: Cargo.toml  README.md  i18n.toml
eruption-process-monitor/src/: constants.rs  dbus_client.rs  dbus_interface.rs  main.rs  procmon.rs  sensors.rs  util.rs
eruption-process-monitor/tests/: integration_test.rs
eruption-util/: Cargo.toml  README.md
eruption-util/src/: hwdevices.rs  main.rs  util.rs
eruption-util/tests/: integration_test.rs
eruption-watchdog/: Cargo.toml  README.md
eruption-watchdog/src/: main.rs
eruption-watchdog/tests/: integration_test.rs
eruption/benches/: benchmark.rs
eruption/src/: color_scheme.rs  constants.rs  dbus_interface.rs  events.rs  hwdevices.rs  logger.rs  main.rs  plugin_manager.rs  plugins.rs  profiles.rs  protocol.rs  scripting.rs  state.rs  threads.rs  util.rs
eruption/tests/: integration_test.rs
eruptionctl/: Cargo.toml  README.md
eruptionctl/src/: color_scheme.rs  dbus_client.rs  device.rs  main.rs  manifest.rs  subcommands.rs  translations.rs  util.rs
eruptionctl/tests/: integration_test.rs
linux/eruption-blackout/: Cargo.toml  Makefile  README.md
pyroclasm/: Cargo.toml  README.md  build.rs  i18n.toml
pyroclasm/src/: app.rs  dbus_client.rs  highlighting.rs  main.rs  resources.rs  subcommands.rs  threads.rs  translations.rs  ui.rs  util.rs
pyroclasm/tests/: integration_test.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+1329 files in other folders)
