[workspace]
members = ["eruption", "eruptionctl", "eruption-netfx", "eruption-debug-tool", "eruption-util", "eruption-process-monitor", "eruption-gui"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 256
incremental = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1
incremental = false
panic = 'abort'
