[workspace]
members = ["eruption", "eruptionctl", "eruption-netfx", "eruption-debug-tool", "eruption-util", "eruption-hotplug-helper", "eruption-process-monitor", "eruption-gui"]
default-members = ["eruption", "eruptionctl", "eruption-netfx", "eruption-debug-tool", "eruption-util", "eruption-hotplug-helper", "eruption-process-monitor"]
resolver = "2"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 256
incremental = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
overflow-checks = false
codegen-units = 1
incremental = false
panic = 'abort'
