#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-audio-proxy"
version = "0.0.15"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "Audio proxy daemon for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []
debug-async = []

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.0"
serde = { version = "1.0.163", features = ["derive"] }
lazy_static = "1.4.0"
flume = "0.10.14"
libc = "0.2.144"
nix = "0.26.2"
atty = "0.2.14"
parking_lot = { version = "0.12.1", features = ["send_guard", "hardware-lock-elision"] }
tokio = { version = "1.28.1", features = ["full", "tracing", "test-util"] }
socket2 = { version = "0.5.3", features = ["all"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.1.9", features = ["parking_lot"] }
thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"
hound = "3.5.0"
libpulse-binding = { version = "2.27.1", default-features = false }
libpulse-simple-binding = { version = "2.27.1", default-features = false }
rust-pulsectl = { git = "https://github.com/X3n0m0rph59/pulsectl.git", branch = "master" }
# dbus = "0.9.3"
# dbus-tree = "0.9.1"
byteorder = "1.4.3"
bytes = "1.4.0"
prost = "0.11.9"
prost-types = "0.11.9"
i18n-embed = { version = "0.13.9", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.6.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.28.1", features = ["full", "tracing", "test-util"] }

[build-dependencies]
prost-build = "0.11.9"
