#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-audio-proxy"
version = "0.0.13"
build = "build.rs"
authors = [
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
    "The Eruption Development Team",
]
edition = "2021"
description = "Audio proxy daemon for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
serde = { version = "1.0.188", features = ["derive"] }
lazy_static = "1.4.0"
flume = "0.11"
log = "0.4.20"
syslog = "6.1.0"
pretty_env_logger = "0.4.0"
libc = "0.2.148"
nix = "0.26.4"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tokio = { version = "1.32.0", features = ["full"] }
socket2 = { version = "0.5.4", features = ["all"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
# tracing = "0.1.26"
# tracing-futures = "0.2.5"
# tracing-subscriber = "0.2.20"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
hound = "3.5.0"
libpulse-binding = { version = "2.28.1", default-features = false }
libpulse-simple-binding = { version = "2.28.1", default-features = false }
rust-pulsectl = { git = "https://github.com/X3n0m0rph59/pulsectl.git", branch = "master" }
# dbus = "0.9.3"
# dbus-tree = "0.9.1"
byteorder = "1.4.3"
bytes = "1.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
i18n-embed = { version = "0.13.9", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["test-util"] }

[build-dependencies]
prost-build = "0.12.1"
