#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-cmd"
version = "0.0.2"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A CLI utility for the Eruption Linux user-mode driver SDK"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://github.com/X3n0m0rph59/eruption"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
clap =  { version = "3.2.8", features = ["derive"] }
clap_complete = "3.2.3"
ctrlc = { version = "3.2.2", features = ["termination"] }
colored = "2.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
libc = "0.2.126"
nix = "0.24.1"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tokio = { version = "1.19.2", features = ["full"] }
#tracing = "0.1.26"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.2.20"
crossbeam = "0.8.1"
thiserror = "1.0.31"
eyre = "0.6.8"
color-eyre = "0.6.1"
lazy_static = "1.4.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.0"
unic-langid = "0.9.0"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
tokio = { version = "1.19.2", features = ["test-util"] }
