#  SPDX-License-Identifier: GPL-3.0-or-later

#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-cmd"
version = "0.0.7"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "A CLI utility for the Eruption Linux user-mode driver SDK"
repository = "https://github.com/eruption-project/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "sdk"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []
windows = []

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
colored = "2.0.4"
libc = "0.2.148"
nix = "0.27.1"
parking_lot = { version = "0.12.1", features = [
  # "send_guard",
  "deadlock_detection",
  "hardware-lock-elision",
] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.4", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
console-subscriber = "0.2.0"
flume = "0.11.0"
tracing-mutex = { version = "0.3.0", features = ["lock_api"] }
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
i18n-embed = { version = "0.14.0", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
