#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-debug-tool"
version = "0.0.19"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A CLI utility to debug USB HID devices"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[dependencies]
lazy_static = "1.4.0"
cfg-if = "1.0.0"
flume = "0.10.13"
clap =  { version = "3.2.5", features = ["derive"] }
clap_complete = "3.2.1"
colored = "2.0.0"
ctrlc = { version = "3.2.2", features = ["termination"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
libc = "0.2.126"
nix = "0.24.1"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
#tracing = "0.1.26"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.2.20"
thiserror = "1.0.31"
eyre = "0.6.8"
color-eyre = "0.6.1"
hexdump = "0.1.1"
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", branch = "master" }
bitvec = "1.0.0"
byteorder = "1.4.3"
serialport = "4.2.0"
crc8 = "0.1.1"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.0"
unic-langid = "0.9.0"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
tokio = { version = "1.19.2", features = ["test-util"] }
