#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-debug-tool"
version = "0.0.27"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "A CLI utility to debug USB HID devices"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []
windows = []
debug-async = []

[dependencies]
lazy_static = "1.4.0"
cfg-if = "1.0.0"
flume = "0.11.0"
clap = { version = "4.3.24", features = ["derive"] }
clap_complete = "4.3.2"
colored = "2.0.4"
ctrlc = { version = "3.4.0", features = ["termination"] }
libc = "0.2.147"
nix = "0.27.1"
parking_lot = { version = "0.12.1", features = [
  "send_guard",
  "hardware-lock-elision",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full", "tracing", "test-util"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.1.10", features = ["parking_lot"] }
thiserror = "1.0.47"
eyre = "0.6.8"
color-eyre = "0.6.2"
hexdump = "0.1.1"
bitvec = "1.0.1"
byteorder = "1.4.3"
serialport = "4.2.2"
crc8 = "0.1.1"
crc16 = "0.4.0"
i18n-embed = { version = "0.13.9", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", rev = "d3d0d88706824536889723564dceeff4ffc5c2a9", default-features = false, features = [
  "linux-native",
] }

[target.'cfg(windows)'.dependencies]
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", rev = "d3d0d88706824536889723564dceeff4ffc5c2a9" }

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["full", "tracing", "test-util"] }
