#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-fx-proxy"
version = "0.0.5"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "Effects proxy daemon for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = ["backends-most"]
debug-async = []
backends-all = ["backend-wayland", "backend-gnome", "backend-x11"]
backends-most = ["backend-gnome", "backend-x11"]
backend-gnome = []
backend-wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-wlr", "smithay-client-toolkit"]
backend-x11 = ["x11", "x11rb"]

[dependencies]
cfg-if = "1.0.0"
nix = "0.26.2"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.2.3"
colored = "2.0.0"
ctrlc = "3.2.5"
lazy_static = "1.4.0"
flume = "0.10.14"
parking_lot = { version = "0.12.1", features = ["send_guard", "hardware-lock-elision"] }
thread_local = "1.1.7"
tokio = { version = "1.28.1", features = ["full", "tracing", "test-util"] }
dyn-clonable = "0.9.0"
libc = "0.2.144"
atty = "0.2.14"
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-futures = "0.2.5"
# tracing-flame = "0.2.0"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.1.9", features = ["parking_lot"] }
thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"
num-traits = "0.2.15"
dbus = "0.9.7"
dbus-tree = "0.9.2"
dbus-tokio = "0.7.6"
image = "0.24.6"
smithay-client-toolkit = { version = "0.17.0", optional = true }
x11 = { version = "2.21.0", features = ["xlib"], optional = true }
x11rb = { version = "0.11.1", optional = true }
wayland-client = { version = "0.30.1", optional = true }
wayland-protocols = { version = "0.30.0", optional = true }
wayland-protocols-wlr = { version = "0.1.0", optional = true }
i18n-embed = { version = "0.13.9", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.6.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
eruption-sdk = { path = "../sdk/lib/rust/eruption-rs" }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.28.1", features = ["full", "tracing", "test-util"] }
