#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-fx-proxy"
version = "0.1.0"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "Effects proxy daemon for the Eruption Linux user-mode driver"
repository = "https://github.com/eruption-project/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = ["backends-most"]
windows = []
backends-all = ["backend-wayland", "backend-gnome", "backend-x11"]
backends-most = ["backend-gnome", "backend-x11"]
backend-gnome = []
backend-wayland = [
  "wayland-client",
  "wayland-protocols",
  "wayland-protocols-wlr",
  "smithay-client-toolkit",
]
backend-x11 = ["x11", "x11rb"]

[dependencies]
cfg-if = "1.0.0"
nix = "0.27.1"
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
colored = "2.0.4"
ctrlc = "3.4.1"
lazy_static = "1.4.0"
flume = "0.11.0"
tracing-mutex = "0.3.0"
thread_local = "1.1.7"
dyn-clonable = "0.9.0"
libc = "0.2.148"
is-terminal = "0.4.9"
tempfile = "3.8.0"
tracing = "0.1.37"
tracing-futures = "0.2.5"
# tracing-flame = "0.2.0"
tracing-log = { version = "0.1.4", features = ["env_logger"] }
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
console-subscriber = "0.2.0"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
num-traits = "0.2.16"
dbus = "0.9.7"
dbus-tree = "0.9.2"
image = "0.24.7"
smithay-client-toolkit = { version = "0.18.0", optional = true }
x11 = { version = "2.21.0", features = ["xlib"], optional = true }
x11rb = { version = "0.12.0", optional = true }
wayland-client = { version = "0.31.0", optional = true }
wayland-protocols = { version = "0.31.0", optional = true }
wayland-protocols-wlr = { version = "0.2.0", optional = true }
i18n-embed = { version = "0.14.0", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
eruption-sdk = { path = "../sdk/lib/rust/eruption-rs" }

[dev-dependencies]
pretty_assertions = "1.4.0"
