#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-gui-gtk3"
version = "0.2.3"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "A GUI for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "gui"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
# default = []
default = ["sourceview"]
sourceview = ["sourceview4"]
debug-async = []

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.144"
atty = "0.2.14"
nix = "0.26.2"
walkdir = "2.3.3"
parking_lot = { version = "0.12.1", features = ["send_guard", "hardware-lock-elision"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
indexmap = { version = "1.9.3", features = ["serde"] }
tokio = { version = "1.28.1", features = ["full", "tracing", "test-util"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.1.9", features = ["parking_lot"] }
config = "0.13.3"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
toml = "0.7.4"
byteorder = "1.4.3"
lazy_static = "1.4.0"
palette = "0.7.1"
nalgebra = "0.32.2"
ndarray = "0.15.6"
transpose = "0.2.2"
thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"
paste = "1.0.12"
colorgrad = "0.6.2"
csscolorparser = { version = "0.6.2", features = ["serde"] }
dbus = "0.9.7"
cairo-rs = "0.17.0"
glib = "0.17.9"
glib-macros = "0.17.9"
gio = "0.17.9"
gdk = "0.17.1"
gdk-pixbuf = "0.17.0"
pango = "0.17.4"
glib-sys = "0.17.4"
gtk-sys = "0.17.0"
gobject-sys = "0.17.4"
gio-sys = "0.17.4"
gdk-sys = "0.17.0"
gtk = { version = "0.17.1", features = ["v3_24"] }
pangocairo = "0.17.0"
sourceview4 = { version = "0.4.0", optional = true }
# sourceview4 = { git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs", optional = true }
i18n-embed = { version = "0.13.9", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.6.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
eruption-sdk = { path = "../sdk/lib/rust/eruption-rs" }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.28.1", features = ["full", "tracing", "test-util"] }
