#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-gui-gtk3"
version = "0.2.11"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "A GUI for the Eruption Linux user-mode driver"
repository = "https://github.com/eruption-project/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "gui"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
# default = ["dbus-ipc", "sourceview", "mimalloc_allocator"]
default = ["dbus-ipc", "sourceview"]
windows = ["dbus-ipc"]
sourceview = ["sourceview4"]
mimalloc_allocator = ["mimalloc"]
dbus-ipc = ["dbus"]

[dependencies]
mimalloc = { version = "0.1.39", optional = true, default-features = false }
cfg-if = "1.0.0"
libc = "0.2.148"
is-terminal = "0.4.9"
nix = { version = "0.27.1", features = ["user", "fs"] }
walkdir = "2.4.0"
parking_lot = { version = "0.12.1", features = [
  # "send_guard",
  "deadlock_detection",
  "hardware-lock-elision",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
indexmap = { version = "2.0.0", features = ["serde"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.2.0", features = ["parking_lot"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
toml = "0.8.0"
byteorder = "1.4.3"
lazy_static = "1.4.0"
palette = "0.7.3"
itertools = "0.11.0"
rayon = "1.7.0"
nalgebra = "0.32.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
transpose = "0.2.2"
resize = "0.8.0"
rgb = { version = "0.8.36", features = ["argb", "serde"] }
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
paste = "1.0.14"
colorgrad = "0.6.2"
csscolorparser = { version = "0.6.2", features = ["serde"] }
dbus = { version = "0.9.7", optional = true }
cairo-rs = "0.18"
glib = "0.18"
glib-macros = "0.18"
gio = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
pango = "0.18"
glib-sys = "0.18"
gtk-sys = "0.18"
gobject-sys = "0.18"
gio-sys = "0.18"
gdk-sys = "0.18"
gtk = { version = "0.18", features = ["v3_24_30"] }
pangocairo = "0.18"
sourceview4 = { git = "https://github.com/X3n0m0rph59/sourceview4-rs.git", optional = true }
# sourceview4 = { git = "https://gitlab.gnome.org/World/Rust/sourceview4-rs", optional = true }
i18n-embed = { version = "0.14.0", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
eruption-sdk = { path = "../sdk/lib/rust/eruption-rs" }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
